karnc/tests/fixtures/negative/80_structural_mismatch/src/commerce/payment.karn
context commerce.payment

exports opaque { AuthId }

type AuthId = String where Matches("AUTH-[0-9]{8}")

type Amount = {
  cents:    Int,
  currency: String,
}

service authorise {
  on call(amount: Amount) -> Effect[Result[AuthId, Int]] {
    Effect.pure(Err(0))
  }
}
